--- a/TaxiCab-SlqReporsitory/TaxiCab-SlqReporsitory.csproj
+++ b/TaxiCab-SlqReporsitory/TaxiCab-SlqReporsitory.csproj
@@ -41,7 +41,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Interface\ITaxiCabJourneyRepository.cs" />
     <Compile Include="Repository\Interface\ITaxiCabVehicleRepository.cs" />
@@ -53,6 +52,11 @@
       <Project>{988cb56e-4bea-4b40-9e24-c96321b510dd}</Project>
       <Name>TaxyCab-Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
