--- a/TaxiCab-WebHooksApis.Tests/TaxiCab-WebHooksApis.Tests.csproj
+++ b/TaxiCab-WebHooksApis.Tests/TaxiCab-WebHooksApis.Tests.csproj
@@ -42,21 +42,33 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions">
       <HintPath>..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.4\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
+    <Reference Include="System.Web.Http, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.4\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="VehicleControllerTets.cs" />
+    <Compile Include="JourneyControllerTest.cs" />
+    <Compile Include="AutenticationControlleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,9 +76,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TaxiCab-SlqReporsitory\TaxiCab-SlqReporsitory.csproj">
+      <Project>{90ee42a4-1be4-4c5a-912e-5dc2a336323b}</Project>
+      <Name>TaxiCab-SlqReporsitory</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TaxiCab-WebHooksApis\TaxiCab-WebHooksApis.csproj">
       <Project>{1085A284-18E1-4063-A5CE-96B2B96DADD0}</Project>
       <Name>TaxiCab-WebHooksApis</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TaxyCab-Models\TaxyCab-Models.csproj">
+      <Project>{988cb56e-4bea-4b40-9e24-c96321b510dd}</Project>
+      <Name>TaxyCab-Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
