--- a/TaxiCab-WebHooksApis/TaxiCab-WebHooksApis.csproj
+++ b/TaxiCab-WebHooksApis/TaxiCab-WebHooksApis.csproj
@@ -151,6 +151,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AutenticationControlle.cs" />
+    <Compile Include="Controllers\PannicButtonController.cs" />
     <Compile Include="Controllers\VehicleController.cs" />
     <Compile Include="Controllers\JourneyController.cs" />
     <Compile Include="Global.asax.cs">
