Add PANICBUTTON controller

--- a/TaxiCab-WebHooksApis/Web.config
+++ b/TaxiCab-WebHooksApis/Web.config
@@ -11,6 +11,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <clear />
+    <add name="TaxyCabDb2" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TaxyCabDb2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+  </connectionStrings>
   <system.web>
      <authentication mode="Forms">
   <forms loginUrl="~/home/login" defaultUrl="~/home/index"></forms>
