--- a/TaxiCab-WebHooksApis/Web.config
+++ b/TaxiCab-WebHooksApis/Web.config
@@ -13,7 +13,7 @@
   </appSettings>
   <connectionStrings>
     <clear />
-    <add name="TaxyCabDb2" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TaxyCabDb2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+    <add name="TaxyCabDb2" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\TaxyCabDb2.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
   <system.web>
      <authentication mode="Forms">
