--- a/TaxiCab-Client/TaxiCab-NotificationService.csproj
+++ b/TaxiCab-Client/TaxiCab-NotificationService.csproj
@@ -107,7 +107,9 @@
   <ItemGroup>
     <Content Include="Imagenes\autorize.PNG" />
     <Content Include="Imagenes\dependecy injection.PNG" />
+    <Content Include="Imagenes\TaxiCab.PNG" />
     <Content Include="Imagenes\vehiclecontroller.PNG" />
+    <Content Include="Imagenes\vehiclenotify.PNG" />
     <Content Include="Imagenes\webconfig.PNG" />
     <Content Include="TaxiCab.PNG" />
   </ItemGroup>
