--- a/TaxiCab-Client/TaxiCab-NotificationService.csproj
+++ b/TaxiCab-Client/TaxiCab-NotificationService.csproj
@@ -106,7 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Imagenes\autorize.PNG" />
+    <Content Include="Imagenes\conn.PNG" />
     <Content Include="Imagenes\dependecy injection.PNG" />
+    <Content Include="Imagenes\panic.PNG" />
     <Content Include="Imagenes\TaxiCab.PNG" />
     <Content Include="Imagenes\vehiclecontroller.PNG" />
     <Content Include="Imagenes\vehiclenotify.PNG" />
